# fingerprint-launcher

./: Cargo.toml
.github/workflows/: build.yml
docs/: design.md  development.md  requirements.md
src/: app.rs  icon.rs  launcher.rs  main.rs
src/db/: account.rs  browser.rs  mod.rs  platform.rs  profile.rs
src/models/: mod.rs
src/ui/: accounts.rs  main_view.rs  mod.rs  profile_edit.rs  settings.rs
