[package]
name = "fingerprint-launcher"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.31"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
rfd = "0.15"
image = { version = "0.24", default-features = false, features = ["png", "jpeg", "ico"] }
resvg = "0.42"
usvg = "0.42"
tiny-skia = "0.11"
icns = "0.3"
plist = "1"
pelite = "0.10"
